Fixed: Tile flickering on mobile (FINALLY!)

--- a/styles/game.css
+++ b/styles/game.css
@@ -12,7 +12,7 @@
 #gridLines
 {
 	stroke: var(--color-highlight);
-	stroke-width: 0.01;
+	stroke-width: 1;
 	/* stroke-opacity: 0.5; */
 	/* stroke-dasharray: 0.3 0.7;
 	stroke-dashoffset: 0.15; */
